--- a/despegar-frontend/.env
+++ b/despegar-frontend/.env
@@ -1,2 +1,2 @@
-VITE_REACT_BACKEND_URL = 'https://localhost:44381/api'
-VITE_REACT_BACKEND_MOCK = 'true'
+VITE_REACT_BACKEND_URL = 'http://localhost:5000/'
+VITE_REACT_BACKEND_MOCK = 'false'
